# FUSILLI

./: .gitignore  Fusion Domain Seq - HoV_RevPrimerSeq.csv  Fusion Domain Seq - HoV_gene_seq.csv  README.md  fusilli_env.yaml  fusion_breakpoint_sequences.csv  fusion_ends.csv  pyproject.toml  pytest.ini  speed_tests.py  test_counts_single.csv  todo.txt
.devcontainer/: Dockerfile  devcontainer.json
config/: MIGRATION.md  config.yaml  config_p.yaml  config_p_quick.yaml  config_p_quick_extra.yaml  fusion_partners.csv  kinase_fusions.csv  kinase_fusions_hov.csv  kinase_samples.csv  kinase_samples_hov.csv  kinase_unfused.csv  kinases.yaml  kinases_exons.csv  kinases_second.yaml  multiqc_config.yaml  samples.csv  samples_p.csv  test.yaml  test_fusions.csv
config/examples/: config.yaml  fusion_partners.csv  kinase_unfused.csv  kinases_exons.csv  samples.csv  test.csv  test.yaml
containers/: Dockerfile  README.md  build_docker.sh  build_singularity.sh  fusilli.def
docs/: AGENT_ORIENTATION.md  AI_ASSISTED_CODING.md  ARCHITECTURE.md  PERFORMANCE_BOTTLENECKS.md  PROJECT_MANAGEMENT.md  QC_METRICS_GUIDE.md  QC_MULTIQC_PROPOSAL.md  TECHNICAL.md  status.md
profiles/: README.md
profiles/slurm/: config.yaml  (+1 more)
references/: amplicon_ref.fasta  amplicon_ref.fasta.fai  amplicon_ref.gb  amplicon_ref.gff  kinase_sequences_hov.fasta
tasks/: tasks.md
tests/: __init__.py  conftest.py  environment.yml  expected_counts.csv  test_aggregate_counts.py  test_fusion_sequences.py  test_integration.py  test_string_matcher.py  test_synthetic_detection.py  test_utils.py
workflow/: Snakefile
(+48 files in other folders)
