[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusilli"
version = "1.0.0"
description = "Fusion Utility for Scanning and Identification of Library Linked Interactions - A Snakemake pipeline for analyzing mutational scanning data from fusion protein libraries"
authors = [
    {name = "FUSILLI Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bioinformatics", "snakemake", "deep-mutational-scanning", "fusion-proteins"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython",
    "pandas",
    "numpy",
    "pyfastx",
    "pyahocorasick",
    "cigar",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
snakemake = [
    "snakemake>=8.0",
]

[project.urls]
Homepage = "https://github.com/odcambc/FUSILLI"
Repository = "https://github.com/odcambc/FUSILLI"
Documentation = "https://github.com/odcambc/FUSILLI#readme"
